fixed misalignement in Form2

--- a/frontend/src/app/recherche/form3/form3.component.css
+++ b/frontend/src/app/recherche/form3/form3.component.css
@@ -101,6 +101,7 @@ label svg{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 5px;
 }
 
 .btn-menu{
